[gd_scene load_steps=12 format=2]

[ext_resource path="res://plex_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://plex_20.tres" type="DynamicFont" id=2]
[ext_resource path="res://Client.tscn" type="PackedScene" id=3]
[ext_resource path="res://Server_Menu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://IBMPlexMono-SemiBold.ttf"

[sub_resource type="DynamicFont" id=7]
size = 14
font_data = SubResource( 6 )

[node name="Server_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.515381
margin_bottom = 0.515381
script = ExtResource( 4 )

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Window" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -248.0
margin_right = 170.0
margin_bottom = 72.0
rect_min_size = Vector2( 300, 0 )
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Window"]
margin_right = 340.0
margin_bottom = 359.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 339.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="Window/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "Space Terminals"
align = 1
valign = 1

[node name="LobbySection" type="VBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 300.0
margin_bottom = 130.0

[node name="LobbyTitle" type="Label" parent="Window/MarginContainer/VBoxContainer/LobbySection"]
margin_right = 300.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Lobby ID [Join only]"
align = 1
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="Window/MarginContainer/VBoxContainer/LobbySection"]
margin_top = 31.0
margin_right = 300.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Window/MarginContainer/VBoxContainer/LobbySection/PanelContainer"]
margin_right = 300.0
margin_bottom = 37.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="IDEntry" type="LineEdit" parent="Window/MarginContainer/VBoxContainer/LobbySection/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameSection" type="VBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 300.0
margin_bottom = 218.0

[node name="UserTitle" type="Label" parent="Window/MarginContainer/VBoxContainer/UsernameSection"]
margin_right = 300.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Username"
align = 1
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="Window/MarginContainer/VBoxContainer/UsernameSection"]
margin_top = 31.0
margin_right = 300.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Window/MarginContainer/VBoxContainer/UsernameSection/PanelContainer"]
margin_right = 300.0
margin_bottom = 37.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="UserEntry" type="LineEdit" parent="Window/MarginContainer/VBoxContainer/UsernameSection/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 300.0
margin_bottom = 280.0
custom_constants/separation = 50
alignment = 1

[node name="CreateButton" type="Button" parent="Window/MarginContainer/VBoxContainer/Buttons"]
margin_left = 30.0
margin_right = 144.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "Create"

[node name="JoinButton" type="Button" parent="Window/MarginContainer/VBoxContainer/Buttons"]
margin_left = 194.0
margin_right = 270.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "Join"

[node name="ID" type="Label" parent="Window/MarginContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 300.0
margin_bottom = 319.0
custom_fonts/font = SubResource( 7 )
text = "ID:"
align = 1
valign = 1

[node name="Client" parent="." instance=ExtResource( 3 )]

[connection signal="text_changed" from="Window/MarginContainer/VBoxContainer/LobbySection/PanelContainer/MarginContainer/IDEntry" to="." method="_on_IDEntry_text_changed"]
[connection signal="text_changed" from="Window/MarginContainer/VBoxContainer/UsernameSection/PanelContainer/MarginContainer/UserEntry" to="." method="_on_UserEntry_text_changed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/Buttons/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/Buttons/JoinButton" to="." method="_on_JoinButton_pressed"]
